--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,20 @@
 	<name>JLMSite</name>
 	<description>A website for John Luther Mackin</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>17.0.3</java.version>
 	</properties>
+	
 	<dependencies>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
@@ -41,12 +48,14 @@
 	    	</exclusions>
 		</dependency>
 		
+		<!--
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		-->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -79,7 +88,11 @@
 			<scope>test</scope>
 		</dependency>
 		-->
-		
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
