--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "com.JLMthingsNstuff.JLMSite.jwtExpirationMs",
     "type": "java.lang.String",
     "description": "A description for 'com.JLMthingsNstuff.JLMSite.jwtExpirationMs'"
+  },
+  {
+    "name": "java.runtime.version",
+    "type": "java.lang.String",
+    "description": "A description for 'java.runtime.version'"
   }
 ]}
